--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     <body>
         <div class="container">
             <header class="header">
-                header part
+                <img src="img/logo.png" alt="trillo logo" class="logo">
+    <form action="#" class="search">
+        <input type="text" class="search__input" placeholder="search hotels">
+        <button class="seacrh__button">
+            <svg class="search__icon">
+                <use xlink:href="img/sprite.svg#icon-magnifying-glass"></use>
+            </svg>
+        </button>
+    </form>
             </header>
             <div class="content">
                 <nav class="sidebar">
