--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             class="search__input"
             placeholder="search hotels"
           />
-          <button class="seacrh__button">
+          <button class="search__button">
             <svg class="search__icon">
               <use xlink:href="img/sprite.svg#icon-magnifying-glass"></use>
             </svg>
