--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
         </form>
 
         <nav class="user-nav">
-          <div class="user-nav__nav__icon-box">
+          <div class="user-nav__icon-box">
             <svg class="user-nav__icon">
               <use xlink:href="img/sprite.svg#icon-bookmark"></use>
             </svg>
-            <span class="user-nav__ntification">7</span>
+            <span class="user-nav__notification">7</span>
           </div>
-          <div class="user-nav__nav__icon-box">
+          <div class="user-nav__icon-box">
             <svg class="user-nav__icon">
               <use xlink:href="img/sprite.svg#icon-chat"></use>
             </svg>
-            <span class="user-nav__ntification">7</span>
+            <span class="user-nav__notification">11</span>
           </div>
           <div class="user-nav__user">
             <img
