--- a/index.html
+++ b/index.html
@@ -55,7 +55,17 @@
       </header>
 
       <div class="content">
-        <nav class="sidebar">navigation</nav>
+        <nav class="sidebar">
+          <ul class="side-nav">
+            <li class="side-nav__item">
+              <a href="#" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-home"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </nav>
         <main class="hotel-view">hotel-view</main>
       </div>
     </div>
