--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </div>
 
           <div class="overview">
-            <h1 class="overview__heading">hotel las palmas</h1>
+            <h1 class="overview__heading">Hotel Las Palmas</h1>
             <div class="overview__stars">
               <svg class="overview__icon-star">
                 <use xlink:href="img/sprite.svg#icon-star"></use>
@@ -139,7 +139,7 @@
             </div>
 
             <div class="overview__location">
-              <svg class="overview__icon-star-location">
+              <svg class="overview__icon-location">
                 <use xlink:href="img/sprite.svg#icon-location-pin"></use>
               </svg>
               <button class="btn-inline">albufeica , portugal</button>
