compress images and change avatar pictures

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
           <div class="user-nav__user">
             <img
-              src="img/user.jpg"
+              src="img/user-1.jpg"
               alt="user photo"
               class="user-nav__user-photo"
             />
@@ -240,7 +240,6 @@
 
               <button class="btn-inline">Show all <span>&rarr;</span></button>
             </div>
-         
           </div>
           <div class="cta">
             <h2 class="cta__book-now">
@@ -249,7 +248,7 @@
             <button class="btn">
               <span class="btn__visible">Book now</span>
               <span class="btn__invisible">Only 4 rooms left</span>
-             </button>
+            </button>
           </div>
         </main>
       </div>
